# feel-backend

./: .env  Cargo.toml  README.md
abi/: Cargo.toml  build.rs
abi/protos/: types.proto
abi/src/: config.rs  error.rs  lib.rs
abi/src/pb/: types.rs
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
api/src/apis/: mod.rs  user.rs  utils.rs
api/src/apis/label/: dto.rs  mod.rs
api/src/apis/user/: dto.rs  mod.rs
api/src/apis/utils/: auth.rs  mod.rs  validate.rs
api/src/helpers/: jwt.rs  mod.rs
api/src/user/: mod.rs
cmd/feel-api/: Cargo.toml
cmd/feel-api/src/: main.rs
config/: api_server.yaml  db.yaml  jwt.yaml  log.yaml  redis.yaml
crates/abi/: Cargo.toml
crates/abi/src/: config.rs  error.rs  lib.rs  log.rs  user.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  routes.rs  utils.rs
crates/api/src/user/: mod.rs
crates/cache/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  user.rs
crates/db/src/cache/: mod.rs  redis_impl.rs
crates/db/src/database/: mod.rs  user.rs
crates/db/src/user/: db.rs  dto.rs  mod.rs  user.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs
crates/entity/src/label/: label_base.rs  mod.rs
crates/entity/src/user/: mod.rs  user_auth.rs  user_base.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250113_082151_create_user.rs  m20250113_095101_create_user_auth.rs  m20250214_030446_create_label.rs  m20250214_030518_create_user.rs  m20250218_025328_create_user_auth.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/protos/: feel_sdk.proto
crates/protocol/src/: lib.rs
crates/protocol/src/pb/: feel_sdk.rs  mod.rs
crates/service/: Cargo.toml
crates/service/src/: jwt_helper.rs  lib.rs  user.rs  web_hook.rs
crates/service/src/encryptor/: mod.rs  sha2_impl.rs
crates/storage/: Cargo.toml
crates/storage/src/cache/: mod.rs  redis_impl.rs
crates/storage/src/user/: database.rs  db.rs
crates/tools/: Cargo.toml
crates/tools/src/: config_util.rs  encryptor.rs  json_util.rs  jwt_helper.rs  lib.rs  time_util.rs
db/: Cargo.toml
db/src/: error.rs  lib.rs  main.rs
db/src/database/: label.rs  mod.rs  user.rs
db/src/database/dao/: label.rs  mod.rs  user.rs
db/src/helpers/: mod.rs
db/src/rpc/: mod.rs  service.rs
docs/: feel.md
entity/: Cargo.toml
entity/src/: lib.rs  utils.rs
entity/src/label/: label_meta.rs  mod.rs  user_label.rs
entity/src/user/: mod.rs  user_auth.rs  user_base.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240610_061903_create_user_base.rs  m20240610_062346_create_user_auth.rs  m20240612_085658_create_label_meta.rs  m20240612_085711_create_user_label.rs
rfcs/: db.md  动态服务发现.md  印象.md  整体架构.md  标签.md  注册中心.md  用户.md
utils/src/: client_factory.rs  error.rs  service_resolver.rs
utils/src/helpers/: mod.rs
utils/src/service_discovery/: mod.rs  tonic_service_discovery.rs
utils/src/service_register_center/: consul.rs  mod.rs
