[workspace]
members = [
    "./crates/abi",
    ".",
    "crates/db",
    "crates/entity",
    "crates/migration",
    "api",
    "crates/service",
    "crates/protocol", "crates/tools",
]
resolver = "2"

[workspace.dependencies]
thiserror = { version = "1.0" }

# 数据库
sea-orm = { version = "1.1" }

tokio = { version = "1.43" }

# 序列化
serde = { version = "1.0" }
serde_repr = "0.1"
serde_json = { version = "1.0" }

# grpc
tonic = { version = "0.12" }
tonic-build = { version = "0.12" }
# proto
prost = "0.13"
prost-types = "0.13"

axum = { version = "0.7" }

config = { version = "0.15" }
