[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
thiserror = { version = "1.0" }


[build-dependencies]
tonic-build = "0.11.0"
