[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
thiserror = { version = "1.0" }
prost = "0.12"
prost-types = "0.12.3"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }

[build-dependencies]
tonic-build = "0.11.0"
