[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
thiserror = { version = "1.0" }
prost = "0.12"
prost-types = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }
figment = { version = "0.10", features = ["env", "yaml"] }
dotenvy = { version = "0.15" }
chrono = { version = "0.4" }
futures = "0.3.30"

sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }

[build-dependencies]
tonic-build = "0.11.0"
