[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { path = "../abi" }

poem = { version = "3.0" }
poem-openapi = { version = "5.0", features = ["swagger-ui"] }
thiserror = { version = "1.0" }
