[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8" }
axum-auth = "0.8.0-rc.1"

tokio = { workspace = true, features = ["full"] }

abi = { path = "../crates/abi" }
service = { path = "../crates/service" }
db = { path = "../crates/db" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }