[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }

tokio = { workspace = true, features = ["full"] }

abi = { path = "../crates/abi" }
service = { path = "../crates/service" }
db = { path = "../crates/db" }
migration = { path = "../crates/migration" }
tools = { path = "../crates/tools" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }