[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-postgres"] }

tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3" }