[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]

protocol = { path = "../protocol" }

async-trait = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { workspace = true, features = ["derive"] }

tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3" }