[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]

protocol = { path = "../protocol" }

thiserror = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

sea-orm = { workspace = true, features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }

redis = { version = "0.25.2", features = ["tokio-comp"] }

config = { workspace = true, features = ["yaml"] }